Education and contact added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="smoothScroll" href="https://github.com/raykstar">Github</a></li>
+                        <li><a class="smoothScroll" href="https://github.com/raykstar" target="_blank">Github</a></li>
                    </ul>
                   </div>
             </div>
@@ -155,17 +155,91 @@
                 </div>
        </section>
   
-        <div class="education" id="education">
+       <section id="education" data-stellar-background-ratio="0.5">
+        <div class="container">
+             <div class="row">
 
-        </div>
+                  <div class="col-md-12 col-sm-12">
+                       <div class="section-title">
+                            <h1>Educational Backgroud</h1>
+                       </div>
+                  </div>
 
-        <div class="skills" id="skills">
+                  <div class="col-md-4 col-sm-6">
+                       <div class="education-thumb">
+                           <div class="education-title">
+                                <h2>National Institue of Technology, Silchar</h2>
+                                <p>Bachelor of Technology</p>
+                                 
+                           </div>
+                           <div class="education-info">
+                                 <p>Computer Science and Engineering</p>
+                                 <p>CPI: 9.26</p>
+                                 <p>2016-2020</p>
+                           </div>
+                           <div class="education-bottom">
+                               <p>Branch Topper</p>
+                           </div>
+                       </div>
+                  </div>
 
-        </div>
+                  <div class="col-md-4 col-sm-6">
+                       <div class="education-thumb">
+                           <div class="education-title">
+                                <h2>Ramanuj Gupta Junior College, Silchar</h2>
+                                <p>HSSLC (AHSEC)</p>
+                           </div>
+                           <div class="education-info">
+                                 <p>Science</p>
+                                 <p>Percentage: 93.4%</p>
+                                 <p>2014-2016</p>
+                           </div>
+                           <div class="education-bottom">
+                                <p>State Highest in Physics (98%)</p>
+                            </div>
+                       </div>
+                  </div>
 
-        <div class="contact" id="contact">
+                  <div class="col-md-4 col-sm-6">
+                       <div class="education-thumb">
+                           <div class="education-title">
+                                <h2>Holy Cross School, Silchar</h2>
+                                <p>HSLC (SEBA)</p>
+                           </div>
+                           <div class="education-info">
+                                 <p>Secondary Education</p>
+                                 <p>Percentage: 92.67%</p>
+                                 <p>2002-2014</p>
+                            </div>
+                           <div class="education-bottom">
+                                <p>State Highest in Gen. Mathematics (100%)</p>     
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+            </div>
+        </section>   
 
-        </div>
+        <section id="skills" data-stellar-background-ratio="0.5">
+        
+        </section>
+
+        <section id="contact" data-stellar-background-ratio="0.5">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="section-title">
+                             <h1>Let's Connect ... </h1>
+                        </div>
+                        <h3>Drop me an email at <a href="mailto:atmashreeray@gmail.com">atmashreeray@gmail.com</a></h3>
+                   </div>
+
+                </div>
+            </div>
+
+        </section>
+
         <script src="js/jquery.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery.stellar.min.js"></script>
